2015-12-04 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0

	* Implemented the correct m:n functionality between videos and video lists
	* Added the flexforms for the backend plugins
	* Added new showSingleVideo and showVideoLists actions to the controllers
	* Added new template files for the new actions
	* Code cleanup: deleted unused actions and template files

2015-12-03 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0

	* Replaced the standard icons with vimeo ones
	* Added the Assets folder to .gitignore
	* Added german translations

2015-11-30 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0

	* Initial state kiskstarted with the ExtensionBuilder
	* Added this ChangeLog file
	* Set the version to 0.0.0
	* Changes the label field of the video tca to the title