@@ -1,42 +1,3 @@
-<table class="tx-jhe-vimeo" >
-	<tr>
-		<td>
-			<f:translate key="tx_jhevimeo_domain_model_video.vimeoid" />
-		</td>
-		<td>
-			{video.vimeoid}
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<f:translate key="tx_jhevimeo_domain_model_video.width" />
-		</td>
-		<td>
-			{video.width}
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<f:translate key="tx_jhevimeo_domain_model_video.height" />
-		</td>
-		<td>
-			{video.height}
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<f:translate key="tx_jhevimeo_domain_model_video.title" />
-		</td>
-		<td>
-			{video.title}
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<f:translate key="tx_jhevimeo_domain_model_video.description" />
-		</td>
-		<td>
-			{video.description}
-		</td>
-	</tr>
-</table>
+<h3>{video.title}</h3>
+<p>{video.description}</p>
+<iframe src="https://player.vimeo.com/video/{video.vimeoid}" width="{video.width}" height="{video.height}" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
