@@ -12,8 +12,6 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="main">
-<h3>Single View for Video</h3>
-
-<f:flashMessages />
-<f:render partial="Video/Properties" arguments="{video:video}" />
+  <f:flashMessages />
+  <f:render partial="Video/Properties" arguments="{video:video}" />
 </f:section>
